Customizing for canada

--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Canadian Edition 20161031', 'ca-edition', 'v20161031', '19491000087109', 'http://ca-browser.termspace.com/api/snomed');
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Canadian Edition 20161031', 'ca-edition', 'v20161031', '19491000087109,20581000087109', 'http://ca-browser.termspace.com/api/snomed');
                                         reloadCurrentPerspective();">CA Edition 20161031</a></li>
                             </ul>
                         </li>
@@ -1030,7 +1030,7 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('CA Edition 20161031', 'ca-edition', 'v20161031', '19491000087109', 'http://ca-browser.termspace.com/api/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('CA Edition 20161031', 'ca-edition', 'v20161031', '19491000087109,20581000087109', 'http://ca-browser.termspace.com/api/snomed');
                                 switchLanguage('en', 'img/flags/ca.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/ca.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">CA edition</span></a>
                         &nbsp;&nbsp;&nbsp;
@@ -1264,7 +1264,7 @@
             <!--}-->
         <!--</script>-->
         <!--Start Cookie Script-->
-        <script type="text/javascript" charset="UTF-8" src="http://chs02.cookie-script.com/s/b80c8456dc1c3b2bd6652feea1124eb1.js"></script>
+        <!--<script type="text/javascript" charset="UTF-8" src="http://chs02.cookie-script.com/s/b80c8456dc1c3b2bd6652feea1124eb1.js"></script>-->
         <!--End Cookie Script-->
 
 
