Customizing for canada

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
             var enableQueriesInFullPerspective = true;
             var selectedLanguage = 'en';
-            var selectedFlag = 'img/flags/us.png';
+            var selectedFlag = 'img/flags/ca.png';
             var currentPerspective = "home";
 
             //It can be time consuming to load all the collections into mongo.  If you are only loading one collection
