--- a/browser.html
+++ b/browser.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>IHTSDO SNOMED CT Browser - beta</title>
+    <title>IHTSDO SNOMED CT Browser</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="IHTSDO SNOMED CT Browser">
