Customizing for Drugs project

--- a/index.html
+++ b/index.html
@@ -973,7 +973,7 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1>Drugs Technolofy Preview</h1>
+                    <h1>Drugs Technology Preview</h1>
                     <h2>Terminology Browser</h2>
                     <p>This browser gives access to the 20170131 Tech Preview of the Drugs / Pharmaceutical products project.</p>
                     <br><br><br><br>
