--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             };
 
             var options = {
-                serverUrl: "https://dev-browser.termspace.com/api/snomed",
+                serverUrl: "localhost",
                 edition: "en-edition",
                 release: "v20170131",
-                releaseName: "Drugs tech Preview 20170131",
+                releaseName: "Drugs Model tech Preview 20170131",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -973,9 +973,9 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1>Drugs Technology Preview</h1>
+                    <h1>Drugs Model Technology Preview</h1>
                     <h2>Terminology Browser</h2>
-                    <p>This browser gives access to the 20170131 Tech Preview of the Drugs / Pharmaceutical products project.</p>
+                    <p>This browser gives access to the Drugs Model.</p>
                     <br><br><br><br>
                     <!--<p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>-->
                     <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
