Customizing for Drugs Model project

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             };
 
             var options = {
-                serverUrl: "localhost",
+                serverUrl: "",
                 edition: "en-edition",
                 release: "v20170131",
                 releaseName: "Drugs Model tech Preview 20170131",
