Customizing for Drugs Model project

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             };
 
             var options = {
-                serverUrl: "",
+                serverUrl: "api/snomed",
                 edition: "en-edition",
                 release: "v20170131",
-                releaseName: "Drugs Model tech Preview 20170131",
+                releaseName: "Drugs Model Tech Preview 20170131",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
