--- a/index.html
+++ b/index.html
@@ -893,6 +893,9 @@
                             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                                 <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Drugs Tech Preview 20170131</span> <span class="caret"></span>
                             </button>
+                            <!--<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
+                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">UK Edition 20161001</span> <span class="caret"></span>
+                            </button>-->
                             <ul class="dropdown-menu" role="menu">
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('International Edition 20150731', 'en-edition', 'v20150731', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">International Edition 20150731</a></li>-->
@@ -910,8 +913,8 @@
                                         <!--reloadCurrentPerspective();">NL Edition 20150916</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('Swedish Edition 20151130', 'se-edition', 'v20151130', '46011000052107', 'http://multibrowser.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">Swedish Edition 20151130</a></li>-->
-                                <!--<li><a href="javascript:void(0);" onclick="switchRelease('United Kingdom Edition 20151001', 'uk-edition', 'v20151001', '900000000000508004', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
-                                        <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
+                                <li><a href="javascript:void(0);" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
+                                        reloadCurrentPerspective();">UK Edition 20161001</a></li>
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
                                 <li><a href="javascript:void(0);" onclick="switchRelease('Drugs tech Preview 20170131', 'en-edition', 'v20170131', '900000000000509007', 'api/snomed');
@@ -1010,15 +1013,16 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Swedish Edition 20151130', 'se-edition', 'v20151130', '46011000052107', 'http://multibrowser.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">Swedish edition</span></a>-->
-                        <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United Kingdom Edition 20151001', 'uk-edition', 'v20151001', '900000000000508004', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
-                                <!--switchLanguage('en_US', 'img/flags/gb.png', true);-->
-                                <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United Kingdom edition</span></a>-->
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
+                                switchLanguage('en', 'img/flags/gb.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United Kingdom edition</span></a>
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Drugs tech Preview 20170131', 'en-edition', 'v20170131', '900000000000509007', 'api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Drugs Tech Preview 20170131</span></a>
+
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
                         <!--&nbsp;&nbsp;&nbsp;-->
