--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
             var options = {
                 serverUrl: "api/snomed",
                 edition: "en-edition",
-                release: "v20170131",
-                releaseName: "Drugs Model Tech Preview 20170131",
+                release: "v20170731",
+                releaseName: "Drugs Model Tech Preview 20170731",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -238,7 +238,7 @@
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20170131";
+                    release = "v20170731";
                 }
                 options.release = release;
 
@@ -891,7 +891,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="navbar-btn" id="edition-selector">
                             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Drugs Tech Preview 20170131</span> <span class="caret"></span>
+                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Drugs Tech Preview 20170731</span> <span class="caret"></span>
                             </button>
                             <!--<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                                 <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">UK Edition 20161001</span> <span class="caret"></span>
@@ -913,12 +913,14 @@
                                         <!--reloadCurrentPerspective();">NL Edition 20150916</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('Swedish Edition 20151130', 'se-edition', 'v20151130', '46011000052107', 'http://multibrowser.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">Swedish Edition 20151130</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
-                                        reloadCurrentPerspective();">UK Edition 20161001</a></li>
+                                <!--<li><a href="javascript:void(0);" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
+                                        reloadCurrentPerspective();">UK Edition 20161001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
                                 <li><a href="javascript:void(0);" onclick="switchRelease('Drugs tech Preview 20170131', 'en-edition', 'v20170131', '900000000000509007', 'api/snomed');
                                         reloadCurrentPerspective();">Drugs Tech Preview 20170131</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Drugs tech Preview 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
+                                        reloadCurrentPerspective();">Drugs Tech Preview 20170731</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1013,15 +1015,18 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Swedish Edition 20151130', 'se-edition', 'v20151130', '46011000052107', 'http://multibrowser.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">Swedish edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
+                        <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United Kingdom Edition 20161001', 'uk-edition', 'v20161001', '900000000000508004', 'api/snomed');
                                 switchLanguage('en', 'img/flags/gb.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United Kingdom edition</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United Kingdom edition</span></a>-->
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Drugs tech Preview 20170131', 'en-edition', 'v20170131', '900000000000509007', 'api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Drugs Tech Preview 20170131</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Drugs tech Preview 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
+                                switchLanguage('en', 'img/flags/us.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Drugs Tech Preview 20170731</span></a>
 
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
