Update to 1.34 and daily build link

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <link rel="stylesheet" href="css/popover-extra-placements.css">
         <link rel="stylesheet" href="css/animate.css">
 
-        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.33.0.min.css">
+        <link rel="stylesheet" href="snomed-interaction-components/css/snomed-interaction-components-1.34.0.min.css">
 
-        <script src="snomed-interaction-components/js/snomed-interaction-components-1.33.0.min.js"></script>
+        <script src="snomed-interaction-components/js/snomed-interaction-components-1.34.0.min.js"></script>
         <!--<script src="snomed-interaction-components/js/templates.js"></script>-->
         <script src="external-libs/jquery.history.js"></script>
         <script src="external-libs/ZeroClipboard.js"></script>
@@ -921,6 +921,8 @@
                                         reloadCurrentPerspective();">Drugs Tech Preview 20170131</a></li>
                                 <li><a href="javascript:void(0);" onclick="switchRelease('Drugs tech Preview 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
                                         reloadCurrentPerspective();">Drugs Tech Preview 20170731</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Daily Build 20170731', 'en-edition', 'v20170731', '900000000000509007', 'https://dailybuild.ihtsdotools.org/api/snomed');
+                                        reloadCurrentPerspective();">Daily Build 20170731</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
