--- a/index.html
+++ b/index.html
@@ -1029,7 +1029,9 @@
                         <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Drugs tech Preview 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
                                 switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Drugs Tech Preview 20170731</span></a>
-
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Drugs tech Preview 20170731', 'en-edition', 'v20170731', '900000000000509007', 'https://dailybuild.ihtsdotools.org/api/snomed');
+                                switchLanguage('en', 'img/flags/us.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Daily Build 20170731</span></a>
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
                         <!--&nbsp;&nbsp;&nbsp;-->
