--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
             }
 
             var enableQueriesInFullPerspective = true;
-            var selectedLanguage = 'es_UY';
-            var selectedFlag = 'img/flags/uy.png';
+            var selectedLanguage = 'es';
+            var selectedFlag = 'img/flags/es.png';
             var currentPerspective = "home";
 
             //It can be time consuming to load all the collections into mongo.  If you are only loading one collection
@@ -99,17 +99,17 @@
             };
 
             var options = {
-                serverUrl: "http://104.131.201.98/api/snomed",
-                edition: "uy-edition",
-                release: "v20161215",
-                releaseName: "UY Edition 20161215",
+                serverUrl: "http://localhost/api/snomed",
+                edition: "es-translation",
+                release: "v20171031",
+                releaseName: "ES Edition 20171031",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
                 displaySynonyms: true,
                 selectedView: "inferred",
                 displayChildren: false,
-                langRefset: ["5641000179103"],
+                langRefset: ["450828004"],
                 closeButton: false,
                 collapseButton: false,
                 linkerButton: true,
@@ -245,13 +245,13 @@
 
                 var edition = QueryString.edition;
                 if (typeof edition == "undefined" || edition == null || edition == "") {
-                    edition = "uy-edition";
+                    edition = "es-translation";
                 }
                 options.edition = edition;
 
                 var release = QueryString.release;
                 if (typeof release == "undefined" || release == null || release == "") {
-                    release = "v20161215";
+                    release = "v20171031";
                 }
                 options.release = release;
 
@@ -928,8 +928,8 @@
                                         <!--reloadCurrentPerspective();">UK Edition 20151001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Uruguay Edition 20161215', 'uy-edition', 'v20161215', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                        reloadCurrentPerspective();">UY Edition 20161215</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Spanish Edition 20171031', 'es-translation', 'v20171031', '450828004', 'http://localhost/api/snomed');
+                                        reloadCurrentPerspective();">UY Edition 20171031</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -987,10 +987,10 @@
             <!-- Welcome Perspective -->
             <div id="welcome-perspective"  class="bperspective">
                 <div class="jumbotron">
-                    <h1><span class="i18n" data-i18n-id="i18n_welcome_2nd">The IHTSDO SNOMED CT Browser</span></h1>
-                    <p><span class="i18n" data-i18n-id="i18n_home1">The IHTSDO SNOMED CT Browser provides ways to browse and search SNOMED CT. The browser has been implemented as part of development within the IHTSDO Open Tooling Framework, by the IHTSDO and its development partners</span></p>
-                    <p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>
-                    <p><span class="i18n" data-i18n-id="i18n_home3">Please provide any feedback by clicking on the feedback button at the top of the page. Your feedback is essential to the evolution and improvement of this service.</span></p>
+                    <h1><span class="i18n" data-i18n-id="">IHTSDO Spanish Edition Daily Build</span></h1>
+                    <p><span class="i18n" data-i18n-id="">Daily updates from the translation of the spanish edition, in preparation for the October 31st, 2017 release.</span></p>
+                    <!--<p><span class="i18n" data-i18n-id="i18n_home5">The Browser is provided by the IHTSDO to anyone for reference purposes. There are other tools developed by IHTSDO for Members for the use in health care settings. </span></p>-->
+                    <!--<p><span class="i18n" data-i18n-id="i18n_home3">Please provide any feedback by clicking on the feedback button at the top of the page. Your feedback is essential to the evolution and improvement of this service.</span></p>-->
                     <!--<h2><span class="i18n" data-i18n-id="i18n_international_editions">International Editions</span></h2>-->
                     <!--<p>-->
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('International Edition 20160131', 'en-edition', 'v20160131', '900000000000509007', 'http://192.241.166.137/api/snomed');-->
@@ -1027,9 +1027,9 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Uruguay Edition 20161215', 'uy-edition', 'v20161215', '5641000179103', 'http://104.131.201.98/api/snomed');
-                                switchLanguage('es_UY', 'img/flags/uy.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;Navegar</span><br><span class="small">Uruguay edition</span></a>
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Spanish Edition 20171031', 'es-translation', 'v20171031', '450828004', 'http://localhost/api/snomed');
+                                switchLanguage('es', 'img/flags/es.png', true);
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/es.png">&nbsp;&nbsp;&nbsp;Navegar</span><br><span class="small">Spanish Edition</span></a>
                     </p>
                     <!--<p>-->
                         <!--&nbsp;&nbsp;<span class="i18n" data-i18n-id="i18n_or">or</span>&nbsp;&nbsp;-->
@@ -1044,7 +1044,7 @@
                         <!--<br><img src="img/flags/se.png">&nbsp;&nbsp;&nbsp;<a href="http://www.socialstyrelsen.se/facksprak" target="_blank">The National Board of Health and Welfare, Sweden</a>-->
                         <!--<br><img src="img/flags/gb.png">&nbsp;&nbsp;&nbsp;<a href="http://systems.hscic.gov.uk/data/uktc" target="_blank">The Health and Social Care Information Centre (HSCIC), United Kingdom</a>-->
                         <!--<br><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;<a href="http://www.nlm.nih.gov/" target="_blank">National Library of Medicine (NLM), United States</a>-->
-                        <!--<br><img src="img/flags/uy.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, Uruguay</a>-->
+                        <!--<br><img src="img/flags/es.png">&nbsp;&nbsp;&nbsp;<a href="http://www.agesic.gub.uy/innovaportal/v/4425/1/agesic/programa-saluduy.html" target="_blank">Salud.uy, Uruguay</a>-->
                     <!--</p>-->
 
                     <!--<p><span class="i18n" data-i18n-id="i18n_home4">If you would like to get involved in the development, this code is available under an Apache v2 open source license. You can also find more information on the current backlog of feedback that is up for possible development here - <a href="https://confluence.ihtsdotools.org/display/TOOLS/IHTSDO+SNOMED+CT+Browser" target="_blank">IHTSDO Browser service page</a></span></p>-->
