Update to 1.34 and daily build link

--- a/index.html
+++ b/index.html
@@ -975,7 +975,7 @@
                             </ul>
                         </li>
                         <li>
-                            <p class="pull-right"><a href="http://www.ihtsdo.org" target="_blank"><img class="pull-right visible-lg" src="img/logo-salud-uy-small.png" alt="Salud.uy"></a>
+                            <p class="pull-right"><a href="http://www.ihtsdo.org" target="_blank"><img class="pull-right visible-lg" src="img/newlogo.png" alt="Salud.uy"></a>
                         </li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
