--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
             };
 
             var options = {
-                serverUrl: "api/v1/snomed",
+                serverUrl: "api/snomed",
                 edition: "en-edition",
-                release: "v20180131",
-                releaseName: "International Edition 20180131",
+                release: "v20170731",
+                releaseName: "International Edition 20170731",
                 showIds: false,
                 hideNotAcceptable: true,
                 displayInactiveDescriptions: false,
@@ -891,7 +891,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="navbar-btn" id="edition-selector">
                             <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
-                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Int Edition 20180131</span> <span class="caret"></span>
+                                <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">Int Edition 20170731</span> <span class="caret"></span>
                             </button>
                             <!--<button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">
                                 <span class="i18n" data-i18n-id="i18n_release">Release</span>:&nbsp;<span id="editionLabel">UK Edition 20161001</span> <span class="caret"></span>
@@ -917,8 +917,8 @@
                                         reloadCurrentPerspective();">UK Edition 20161001</a></li>-->
                                 <!--<li><a href="javascript:void(0);" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                         <!--reloadCurrentPerspective();">US Edition 20150901</a></li>-->
-                                <li><a href="javascript:void(0);" onclick="switchRelease('Int Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', 'api/v1/snomed');
-                                        reloadCurrentPerspective();">Int Edition 20180131</a></li>
+                                <li><a href="javascript:void(0);" onclick="switchRelease('Int Edition 20170731', 'en-edition', 'v20170731', '900000000000509007', 'api/snomed');
+                                        reloadCurrentPerspective();">Int Edition 20170731</a></li>
                             </ul>
                         </li>
                         <li class="navbar-btn" id="perspective-selector">
@@ -1019,9 +1019,9 @@
                         <!--<a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('United States Edition 20150901', 'us-edition', 'v20150901', '900000000000509007', 'https://browser-aws-1.ihtsdotools.org/api/snomed');-->
                                 <!--switchLanguage('en_US', 'img/flags/us.png', true);-->
                                 <!--switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Go browsing...</span><br><span class="small">United States edition</span></a>-->
-                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Int Edition 20180131', 'en-edition', 'v20180131', '900000000000509007', '/api/v1/snomed');
+                        <a class="btn btn-primary btn-lg" role="button" onclick="switchRelease('Int Edition 20170731', 'en-edition', 'v20170731', '900000000000509007', '/api/snomed');
                                 switchLanguage('en', 'img/flags/us.png', true);
-                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Int Edition 20180131</span></a>
+                                switchToFullHeight(404684003, 138875005);"><img src="img/flags/us.png">&nbsp;&nbsp;&nbsp;Start browsing</span><br><span class="small">Int Edition 20170731</span></a>
                         <!--&nbsp;&nbsp;&nbsp;-->
                         <!--<a class="btn btn-primary btn-lg" role="button" href="stats/stats-viewer-1/index.html"><span class="glyphicon glyphicon-stats" aria-hidden="true"></span>&nbsp;&nbsp;&nbsp;View CA English Extension<br>statistics and changes</a>-->
                         <!--&nbsp;&nbsp;&nbsp;-->
